[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/options/tutorial.gd" type="Script" id=1]
[ext_resource path="res://art/tutorial/block3.png" type="Texture" id=2]
[ext_resource path="res://art/tutorial/cursor5.png" type="Texture" id=3]
[ext_resource path="res://art/tutorial/block6.png" type="Texture" id=4]
[ext_resource path="res://art/tutorial/clear-8.png.png" type="Texture" id=5]
[ext_resource path="res://art/tutorial/cursor1.png" type="Texture" id=6]
[ext_resource path="res://art/tutorial/block1.png" type="Texture" id=7]
[ext_resource path="res://art/tutorial/clear-2.png.png" type="Texture" id=8]
[ext_resource path="res://art/tutorial/clear-7.png.png" type="Texture" id=9]
[ext_resource path="res://art/tutorial/cursor4.png" type="Texture" id=10]
[ext_resource path="res://art/tutorial/cursor2.png" type="Texture" id=11]
[ext_resource path="res://art/tutorial/block2.png" type="Texture" id=12]
[ext_resource path="res://art/tutorial/up5.png" type="Texture" id=13]
[ext_resource path="res://art/tutorial/cursor3.png" type="Texture" id=14]
[ext_resource path="res://art/tutorial/up1.png" type="Texture" id=15]
[ext_resource path="res://art/tutorial/block5.png" type="Texture" id=16]
[ext_resource path="res://art/tutorial/up6.png" type="Texture" id=17]
[ext_resource path="res://art/tutorial/clear-1.png.png" type="Texture" id=18]
[ext_resource path="res://art/tutorial/block4.png" type="Texture" id=19]
[ext_resource path="res://art/tutorial/up4.png" type="Texture" id=20]
[ext_resource path="res://art/tutorial/up2.png" type="Texture" id=21]
[ext_resource path="res://art/tutorial/up3.png" type="Texture" id=22]
[ext_resource path="res://art/tutorial/clear-3.png.png" type="Texture" id=23]
[ext_resource path="res://art/tutorial/clear-5.png.png" type="Texture" id=24]
[ext_resource path="res://art/tutorial/clear-6.png.png" type="Texture" id=25]
[ext_resource path="res://art/tutorial/clear-4.png.png" type="Texture" id=26]
[ext_resource path="res://art/Silkscreen-Bold.ttf" type="DynamicFontData" id=27]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 27 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 8 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 9 ), ExtResource( 5 ) ],
"loop": true,
"name": "clear",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 17 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 3 ) ],
"loop": true,
"name": "cursor",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 4 ) ],
"loop": true,
"name": "block",
"speed": 5.0
} ]

[node name="controls" type="Node2D"]

[node name="Popup" type="Popup" parent="."]
visible = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="Popup"]
margin_left = 253.0
margin_top = 175.0
margin_right = 295.0
margin_bottom = 195.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 2 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Popup"]
margin_left = 5.0
margin_top = 175.0
margin_right = 47.0
margin_bottom = 195.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 2 )
text = "Back"

[node name="Label" type="Label" parent="Popup"]
margin_left = 157.0
margin_top = 8.0
margin_right = 614.0
margin_bottom = 266.0
rect_min_size = Vector2( 50, 100 )
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Popup"]
margin_left = 254.0
margin_top = 148.0
margin_right = 294.0
margin_bottom = 162.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 2 )
text = "0/4"

[node name="AnimatedSprite" type="AnimatedSprite" parent="Popup"]
position = Vector2( 100, 101 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "clear"
speed_scale = 0.4

[node name="Button3" type="Button" parent="Popup"]
margin_right = 12.0
margin_bottom = 20.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 2 )
text = "<-"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Popup/Button" to="Popup" method="_on_Button_pressed"]
[connection signal="pressed" from="Popup/Button2" to="Popup" method="_on_Button2_pressed"]
[connection signal="pressed" from="Popup/Button3" to="Popup" method="_on_Button3_pressed"]
